--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,29 +15,31 @@ jobs:
       - run:
           name: Compile Only
           command: mvn install -DskipTests=true -B
-      - run:
-          name: Run tests
-          command: mvn install surefire:test -B
-      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - store_artifacts:
-          path: "gosu-test/target/site"
+      #- run:
+      #    name: Run tests
+      #    command: mvn install surefire:test -B
+      #- run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
+      #- run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      #- run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      #- store_artifacts:
+      #    path: "gosu-test/target/site"
   test:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx512m"
-    machine:
-      image: circleci/classic:latest
-    parallelism: 2
+    docker:
+      - image: circleci/java:8
+    #machine:
+    #  image: circleci/classic:latest
+    #parallelism: 2
     steps:
       - checkout
       - run: mvn -version
       - run:
           name: Run tests
-          #command: mvn install surefire:test -B
-          command: ./runParallel.sh
+          command: mvn install surefire:test -B
+          #command: ./runParallel.sh
       - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
@@ -68,9 +70,9 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-      #- test:
-      #    requires:
-      #      - build
+      - test:
+          requires:
+            - build
       - deploy:
           requires:
             - build
