--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ workflows:
             - build
       - deploy:
           requires:
-            - build
+            - test
                 #filters:
                  # branches:
                    # ignore:
