--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,14 @@ jobs:
       - run:
           name: Compile Only
           command: mvn install -DskipTests=true -B
-      #- run:
-      #    name: Run tests
-      #    command: mvn install surefire:test -B
-      #- run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
-      #- run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      #- run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      #- store_artifacts:
-      #    path: "gosu-test/target/site"
+      - run:
+          name: Run tests
+          command: mvn install surefire:test -B
+      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
+      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - store_artifacts:
+          path: "gosu-test/target/site"
   test:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -75,7 +75,7 @@ workflows:
             - build
       - deploy:
           requires:
-            - test
+            - build
                 #filters:
                  # branches:
                    # ignore:
