--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,9 +70,9 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-      - test:
-          requires:
-            - build
+     # - test:
+     #     requires:
+     #       - build
       - deploy:
           requires:
             - build
