--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ jobs:
       - run:
           name: Compile Only
           command: mvn install -DskipTests=true -B
-      - run:
-          name: Run tests
-          command: mvn install surefire:test -B
-      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - store_artifacts:
-          path: "gosu-test/target/site"
+     # - run:
+     #     name: Run tests
+     #     command: mvn install surefire:test -B
+     # - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
+     # - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+     # - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+     # - store_artifacts:
+     #     path: "gosu-test/target/site"
   test:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -28,12 +28,9 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
-    #machine:
-    #  image: circleci/classic:latest
     #parallelism: 2
     steps:
       - checkout
-      - run: mvn -version
       - run:
           name: Run tests
           command: mvn install surefire:test -B
@@ -50,8 +47,6 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
-    #machine:
-     # image: circleci/classic:latest
     steps:
       - checkout
       - run:
@@ -66,9 +61,9 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-     # - test:
-     #     requires:
-     #       - build
+      - test:
+          requires:
+            - build
       - deploy:
           requires:
             - build
