--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
-    #parallelism: 2
+    parallelism: 2
     steps:
       - checkout
       - run:
