--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
+    # - deploy:
+    #     command: ./ci_scripts/deploy_snapshot.sh
+
   deploy:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
