--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,20 +28,23 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
+    #machine:
+    #  image: circleci/classic:latest
+    #parallelism: 2
     steps:
       - checkout
       - run: mvn -version
       - run:
           name: Run tests
           command: mvn install surefire:test -B
+          #command: ./runParallel.sh
       - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
-    # - deploy:
-    #     command: ./ci_scripts/deploy_snapshot.sh
-
+     # - deploy:
+     #     command: ./ci_scripts/deploy_snapshot.sh
   deploy:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -49,6 +52,8 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
+    #machine:
+     # image: circleci/classic:latest
     steps:
       - checkout
       - run:
