--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,6 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     machine:
       image: circleci/classic:latest
-    #docker:
-    #  - image: circleci/java:8
     steps:
       - checkout
       - run: mvn -version
@@ -23,3 +21,28 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
+  deploy:
+    #docker:
+    #  - image: circleci/java:8
+    machine:
+      image: circleci/classic:latest
+    branches:
+      only: /^(?rel\/).+/
+    steps:
+      - checkout
+      - run:
+          name: Deployment
+          command: ./ci_scritps/deploy_snapshot.sh
+workflows:
+  version: 2
+  build_test_deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore:
+                - /rel\/.*/
+      - deploy:
+          requires:
+            - build
+
