--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,30 +21,6 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
-  test:
-    environment:
-      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
-      TERM: dumb
-      MAVEN_OPTS: "-Xmx512m"
-    docker:
-      - image: circleci/java:8
-    #machine:
-    #  image: circleci/classic:latest
-    #parallelism: 2
-    steps:
-      - checkout
-      - run: mvn -version
-      - run:
-          name: Run tests
-          command: mvn install surefire:test -B
-          #command: ./runParallel.sh
-      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - store_artifacts:
-          path: "gosu-test/target/site"
-     # - deploy:
-     #     command: ./ci_scripts/deploy_snapshot.sh
   deploy:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -66,13 +42,10 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-     # - test:
-     #     requires:
-     #       - build
       - deploy:
           requires:
             - build
-                #filters:
-                 # branches:
-                   # ignore:
-                     # - /^(?rel\/).+/
+                filters:
+                  branches:
+                    ignore:
+                      - /^(?rel\/).+/
