--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ workflows:
                 - /rel\/.*/
       - deploy:
           requires:
-            - build
+            - build:
                 filters:
                   branches:
                     ignore:
