--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ workflows:
       - deploy:
           requires:
             - build
-                #filters:
-                #  branches:
-                #    ignore:
-                #      - /^(?rel\/).+/
+          filters:
+            branches:
+              ignore:
+                - /^(?rel\/).+/
