--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
-  deploy:
+  deploy1:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
@@ -42,10 +42,10 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-      - deploy:
+      - deploy1:
           requires:
             - build
-          filters:
-            branches:
-              ignore:
-                - /^(?rel\/).+/
+          #filters:
+          #  branches:
+          #    ignore:
+          #      - /^(?rel\/).+/
