--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
-      MAVEN_OPTS: "-Xmx1024m"
+      MAVEN_OPTS: "-Xmx1024m XX:MaxPermSize=128m"
     machine:
       image: circleci/classic:latest
     steps:
