--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,15 +16,22 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Run tests
-          command: mvn install surefire:test -B
-      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+          command: mvn test -B
+      - run:
+          name: Create test metadata folder
+          command: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
+      - run:
+          name: Collect test metadata
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - run:
+          name: Collect test stdout
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - deploy:
+          name: Deploy artifacts
           command: ./ci_scripts/deploy_snapshot.sh
-      - store_artifacts:
-          path: "gosu-test/target/site"
+      - store_test_results:
+          path: $CIRCLE_TEST_REPORTS/junit
       - save_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
-            - /home/circleci/.m2/repository
+            - ~/.m2
