--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Run tests
-          command: mvn install surefire:test -B
+          command: mvn test -B
       - run:
           name: Create test metadata folder
           command: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
