--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
+      TEST_REPORTS_DIR: "/tmp/test-results"
     machine:
       image: circleci/classic:latest
     branches:
@@ -16,7 +17,8 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Run tests
-          command: mvn test -B
+          #command: mvn test -B
+          command: echo $TEST_REPORTS_DIR
       - run:
           name: Create test metadata folder
           command: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
