--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,17 +17,19 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Run tests
-          #command: mvn test -B
+          command: mvn test -B
+      - run:
+          name: env_var
           command: echo $TEST_REPORTS_DIR
       - run:
           name: Create test metadata folder
           command: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
       - run:
           name: Collect test metadata
-          command: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $TEST_REPORTS_DIR/junit/ \;
       - run:
           name: Collect test stdout
-          command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $TEST_REPORTS_DIR/junit/ \;
       - deploy:
           command: ./ci_scripts/deploy_snapshot.sh
       - store_artifacts:
