--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Collect test stdout
           command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $TEST_REPORTS_DIR/junit/ \;
       - run:
-          command: ls -l $TEST_REPORTS_DIR
+          command: ls -l $TEST_REPORTS_DIR/junit/
       - deploy:
           command: ./ci_scripts/deploy_snapshot.sh
       - store_artifacts:
