--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           command: ./ci_scripts/deploy_snapshot.sh
       - store_artifacts:
           path: "$TEST_REPORTS_DIR/junit/"
-      - store_test_results"
+      - store_test_results:
           path: "$TEST_REPORTS_DIR/junit/"
       - save_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
