--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,21 +20,21 @@ jobs:
           command: mvn test -B
       - run:
           name: Create test metadata folder
-          command: sudo mkdir -p $TEST_REPORTS_DIR/junit/
+          command: sudo mkdir -p ~/junit/
       - run:
           name: Collect test metadata
-          command: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $TEST_REPORTS_DIR/junit/ \;
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
       - run:
           name: Collect test stdout
-          command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $TEST_REPORTS_DIR/junit/ \;
+          command: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} ~/junit/ \;
       - run:
-          command: ls -l $TEST_REPORTS_DIR/junit/
+          command: ls -l ~/junit/
       - deploy:
           command: ./ci_scripts/deploy_snapshot.sh
       - store_artifacts:
-          path: "$TEST_REPORTS_DIR/junit/"
+          path: ~/junit
       - store_test_results:
-          path: "$TEST_REPORTS_DIR/junit/"
+          path: ~/junit
       - save_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
