--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
     docker:
-      - image: circleci/java:8
+      - image: circleci/openjdk:8-jdk
     branches:
       ignore:
         - /rel\/.*/
@@ -36,7 +36,7 @@ jobs:
             - ~/.m2
   test:
     docker:
-      - image: circleci/java:9
+      - image: circleci/openjdk:9-jdk
     branches:
       ignore:
         - /rel\/.*/
