--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
 #          name: Deployment
 #          command: ./ci_scripts/deploy_snapshot.sh
 workflows:
+  version: 2
   build_test_deploy:
     jobs:
       - build:
