--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - build:
+      - build
       - test:
           requires:
             - build
