--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,10 +79,6 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - build:
-      - test:
-          requires:
-            - build
-      - deploy:
-          requires:
-            - test
+      - build
+      - test
+      - deploy
