Run Test Java 8 and 9 -poc-2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             - ~/.m2
   test:
     docker:
-      - image: circleci/java:9
+      - image: circleci/openjdk:9-jdk
     #branches:
     #  ignore:
     #    - /rel\/.*/
