--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,14 +58,14 @@ jobs:
           key: v1-test9-{{ checksum "gosu-parent/pom.xml" }}
           paths:
             - ~/.m2
-#  deploy:
-#    docker:
-#      - image: circleci/java:8
-#    steps:
-#      - checkout
-#      - run:
-#          name: Deployment
-#          command: ./ci_scripts/deploy_snapshot.sh
+  deploy:
+    docker:
+      - image: circleci/java:8
+    steps:
+      - checkout
+      - run:
+          name: Deployment
+          command: ./ci_scripts/deploy_snapshot.sh
 workflows:
   version: 2
   build_test_deploy:
@@ -74,9 +74,9 @@ workflows:
       - test:
           requires:
             - build
-#      - deploy:
-#          requires:
-#            - test
-#          filters:
-#            branches:
-#              ignore: /rel\/.*/
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              ignore: /rel\/.*/
